--- a/rubysdl/res/layout/main.xml
+++ b/rubysdl/res/layout/main.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:id="@+id/linearLayoutTop"
     >
 </LinearLayout>
 
